--- a/_posts/2023/2023-06-22-homily.md
+++ b/_posts/2023/2023-06-22-homily.md
@@ -11,7 +11,9 @@ gospel_link: Mt/6
 ---
 
 강론말씀 ＞
-기도는 단순한 실행이 아니라, 신학적인 구조를 지녀야 합니다. 유대교와 기독교 모두, 기도가 잘못된 방향으로 발전을 한 적이 있습니다. 간단한 예로, 마르틴 루터 이야기를 드리겠습니다. 그는 미사를 할 때, 아무도 없이 혼자서 15분 동안 했습니다. 그리고 일주일에 단 한번, 토요일 아침에 몰아서 기도를 했습니다. 회계, 복사일, 강론 준비 등 바빠서 그랬을 수도 있겠죠. 그어게 기도는 의무와 성과였던 것입니다. 그리고 자기 자신만을 위한 치료(구원)이었습니다. 종교 개혁 이후에, 기독교의 기도는 개인주의의 모양을 띠게 되었습니다. 내가 신 앞에서 서고, 내가 돌봅니다. 우리가 아니라 '나'입니다. 개신교가 개인주의 성향이 큰 반면, 천주교는 기본적으로 '우리'와 공동체에 대해 이야기합니다. 미사의 정식 제목은 교중미사(교우들과 함께 하는 미사)라고 부릅니다. 우리는 공동체 안에서 함께 기도를 드립니다. 오늘 미사 전에 공동체에서 함께 드린 묵주기도 역시 교회와 모든 성인이 함께 하는 기도입니다. 제가 매일 드리는 성무일도와 시간경 기도 역시, 제가 혼자 성당, 사무실, 혹은 제 방에서 드리지만, 제 뒤에는 모든 성인과 전세계의 성직자들과 신자들이 함께 기도하고 있는 것입니다. 우리는 기도할 때 혼자가 아니고 예수님과 열두 제자가 같이 기도하고 있습니다. 기도는 성과를 내야 하는 업무가 아니고 성부 성자 성령 삼위일체와 함께 하는 대화입니다. 오늘 복음에서 예수님께서 말씀하십니다. 다른 민족 사람들처럼 기도할 때 빈말을 되풀이하지 말라고요. 기도할 때는 누구보다 더 잘 하고, 더 많이 하고, 이런 것이 무의미합니다. 알아둡시다. 우리가 심지어 외딴 곳에서 기도할 때도, 항상 삼위일체가 함께 하십니다.
+기도는 단순한 실행이 아니라, 신학적인 구조를 지녀야 합니다. 유대교와 기독교 모두, 기도가 잘못된 방향으로 발전을 한 적이 있습니다. 간단한 예로, 마르틴 루터 이야기를 드리겠습니다. 그는 미사를 할 때, 아무도 없이 혼자서 15분 동안 했습니다. 그리고 일주일에 단 한번, 토요일 아침에 몰아서 기도를 했습니다. 회계, 복사일, 강론 준비 등 바빠서 그랬을 수도 있겠죠. 그에게 기도는 의무와 성과였던 것입니다. 그리고 자기 자신만을 위한 치료(구원)이었습니다. 종교 개혁 이후에, 기독교의 기도는 개인주의의 모양을 띠게 되었습니다. 내가 신 앞에서 서고, 내가 돌봅니다. 우리가 아니라 '나'입니다. 
+
+개신교가 개인주의 성향이 큰 반면, 천주교는 기본적으로 '우리'와 공동체에 대해 이야기합니다. 미사의 정식 제목은 교중미사(교우들과 함께 하는 미사)라고 부릅니다. 우리는 공동체 안에서 함께 기도를 드립니다. 오늘 미사 전에 공동체에서 함께 드린 묵주기도 역시 교회와 모든 성인이 함께 하는 기도입니다. 제가 매일 드리는 성무일도와 시간경 기도 역시, 제가 혼자 성당, 사무실, 혹은 제 방에서 드리지만, 제 뒤에는 모든 성인과 전세계의 성직자들과 신자들이 함께 기도하고 있는 것입니다. 우리는 기도할 때 혼자가 아니고 예수님과 열두 제자가 같이 기도하고 있습니다. 기도는 성과를 내야 하는 업무가 아니고 성부 성자 성령 삼위일체와 함께 하는 대화입니다. 오늘 복음에서 예수님께서 말씀하십니다. 다른 민족 사람들처럼 기도할 때 빈말을 되풀이하지 말라고요. 기도할 때는 누구보다 더 잘 하고, 더 많이 하고, 이런 것이 무의미합니다. 알아둡시다. 우리가 심지어 외딴 곳에서 기도할 때도, 항상 삼위일체가 함께 하십니다.
 
 첨언＞ 기독교의 기도가 잘못 발전되고 있는 것은 최근 １세기 동안 다시 한번 나타나는 현상입니다. 아까 말씀 드린 마르틴 루터에 의한  "나"를 위한 개인주의적 기도가 아니라, 이번에는 아시아 인도 명상 등의 영향으로 공(空)을 추구하고, "나"를 제거하고 배제합니다. 
 
