--- a/future-dates/2023-06-25-homily.md
+++ b/future-dates/2023-06-25-homily.md
@@ -6,14 +6,8 @@ first_reading: 신명기 30,1-5
 first_reading_link: Dt/30
 second_reading: 에페소서 4,29―5,2 
 second_reading_link: Eph/4
-gospel: 마태 18,19ㄴ-22
-gospel_link: Mt/18
- 
+gospel: 마태복음 10, 26–33
+gospel_link: Mt/10
 
 ---
 
-
-실비아 자매님에게 일요일밤 doc으로 받으신
-강론말씀 문서에서
-텍스트를 여기에 넣으시고,
-이 파일을 _posts/2023 folder로 옮기시면 됩니다.
