--- a/_posts/2023/2023-06-16-homily.md
+++ b/_posts/2023/2023-06-16-homily.md
@@ -25,5 +25,5 @@ gospel_link: Mt/11
 
 여자분들이 아기를 안을 때, 보통 아기 머리가 엄마 심장을 향하게 안습니다. 우연일 수도 있지만, 이것은 엄마 심장 소리를 아이가 들어야 하기 때문이 아닐까요. 애기는 엄마 심장 소리를 들으면서 아기의 심장 (마음)이 엄마의 심장(마음)을 닮아갑니다. 
 
-우리도 예수님 심장소리를 들읍시다. 그래서 우리가 얻는 안식은, 삶과 함께 하는 안식입니다. 오늘은 <a href="https://maria.catholic.or.kr/dictionary/term/term_view.asp?ctxtIdNum=1848&keyword=&gubun=01">성체조배</a>가 있는 날입니다. 예수님의 심장소리를 들을 뿐 아니라, 또한 예수님을 바라 봅시다.
+우리도 예수님 심장소리를 들읍시다. 그래서 우리가 얻는 안식은, 삶과 함께 하는 안식입니다. 오늘은 <a href="https://missa.cbck.or.kr/DailyMissaInfo/MI103">성체조배</a>가 있는 날입니다. 예수님의 심장소리를 들을 뿐 아니라, 또한 예수님을 바라 봅시다.
 
