--- a/_posts/2023/2023-06-25-homily.md
+++ b/_posts/2023/2023-06-25-homily.md
@@ -13,12 +13,12 @@ gospel_link: Mt/10
 
 제가 아는 스위스 종신부제가 1980년대에 한국으로 여행을 떠났습니다. 어느 시골 여관에 들어갔는데 주인이 이분을 가만히 관찰하더니 서툰 영어로 “How old are you?”라고 물었다고 합니다. “나이가 어떻게 되시나요?”는 한국인들에게는 중요한 질문입니다.
 
-혹시 독일어 “<a href="https://de.wikipedia.org/wiki/Gretchenfrage">Gretchenfrage</a>”라는 단어를 들어보신 적이 있는지요? 괴테의 소설 파우스트에서 유래된 단어입니다. 지식을 얻으려는 욕망에 사로잡힌 파우스트 박사는 어느날 그레첸이라는 착하고 아름다울뿐 아니라 신앙심 깊은 젊은 여인을 알게되고 사랑에 빠집니다. 그런데 대화 중 이 여인이 묻습니다. “파우스트 박사님, 당신은 성실하고 착한 사람인 것 같습니다. <b>그런데 하느님을 믿나요?</b>” 이 대답에 그 파우스트 박사는 명료히 대답하지 못하고 말을 흐립니다. 그리고 그레첸은 파우스트가 하느님을 믿지 않는다는 것을 알게됩니다. Gretchenfrage: 이것은 모든 것을 결정지을 정도로 중요한 질문을 뜻합니다. 나이에 대한 질문이 중요한가요? 아닙니다. 하느님을 믿는가가 모든 것을 결정하는 질문입니다.
+혹시 독일어 “<a href="https://de.wikipedia.org/wiki/Gretchenfrage">Gretchenfrage</a>”라는 단어를 들어보신 적이 있는지요? 괴테의 소설 파우스트에서 유래된 단어입니다. 지식을 얻으려는 욕망에 사로잡힌 파우스트 박사는 어느날 그레첸이라는 착하고 아름다울뿐 아니라 신앙심 깊은 젊은 여인을 알게되고 사랑에 빠집니다. 그런데 대화 중 이 여인이 묻습니다. “파우스트 박사님, 당신은 성실하고 착한 사람인 것 같습니다. <strong>그런데 하느님을 믿나요?</strong>” 이 대답에 그 파우스트 박사는 명료히 대답하지 못하고 말을 흐립니다. 그리고 그레첸은 파우스트가 하느님을 믿지 않는다는 것을 알게됩니다. Gretchenfrage: 이것은 모든 것을 결정지을 정도로 중요한 질문을 뜻합니다. 나이에 대한 질문이 중요한가요? 아닙니다. 하느님을 믿는가가 모든 것을 결정하는 질문입니다.
 
-제가 7-8살 즈음에 외할머니가 저희 어머니에게 하셨던 말이 기억납니다. “시간이 지나면 사람들이 불칼을 들고 와서 그것을 목에 가져다대고 하느님을 믿느냐고 물을거다. 그 때 <b>네가 하느님을 믿는다고 하면 천국에 가지만 부정하면 지옥에 간다.</b> 꼭 기억하고 살아야 해.” 이렇게 신신당부하셨던 저희 외할머니는 세상에 가장 중요한 질문과 답이 무엇인지 알고 계셨던 겁니다. 그것은 “<b>하느님을 믿습니까?</b>”입니다.
+제가 7-8살 즈음에 외할머니가 저희 어머니에게 하셨던 말이 기억납니다. “시간이 지나면 사람들이 불칼을 들고 와서 그것을 목에 가져다대고 하느님을 믿느냐고 물을거다. 그 때 <strong>네가 하느님을 믿는다고 하면 천국에 가지만 부정하면 지옥에 간다.</strong> 꼭 기억하고 살아야 해.” 이렇게 신신당부하셨던 저희 외할머니는 세상에 가장 중요한 질문과 답이 무엇인지 알고 계셨던 겁니다. 그것은 “<strong>하느님을 믿습니까?</strong>”입니다.
 
-형제, 자매 여러분, 여러분들은 수많은 질문들을 가지고 계실 겁니다. “하는 일이 잘 될까?” “어디로 휴가를 갈까?” “어떻게 해야 젊음을 유지할 수 있을까?” 등등의 질문들 말입니다. 그런데 이 모든 것들이 부차적인 질문들입니다. 결정적인 질문은 단 하나입니다: “<b>나는 하느님을 믿고 있는가?</b>” 이 질문에 머뭇거리지 말고 “아멘!”으로 답해야 합니다.
+형제, 자매 여러분, 여러분들은 수많은 질문들을 가지고 계실 겁니다. “하는 일이 잘 될까?” “어디로 휴가를 갈까?” “어떻게 해야 젊음을 유지할 수 있을까?” 등등의 질문들 말입니다. 그런데 이 모든 것들이 부차적인 질문들입니다. 결정적인 질문은 단 하나입니다: “<strong>나는 하느님을 믿고 있는가?</strong>” 이 질문에 머뭇거리지 말고 “아멘!”으로 답해야 합니다.
 
-어제 제가 담당하는 Bonstetten 성당의 복사들과 함께 <a href="https://www.einsiedelei.ch/">Verenaschlucht</a>라는 곳으로 성지순례를 갔습니다. 점심을 먹으려고 작은 마을 식당에 들어갔는데 아이들과 동양인 신부가 우르르 들어오니, 한낮부터 맥주를 마시고 있던 세 어르신이 주목하시더군요. 그런데 저희는 보란듯이 함께 십자성호를 긋고 점심식사 기도를 했습니다. 하느님을 믿는다고 고백한 겁니다. 신앙을 감추는 이에게 천국은 없습니다. 망설이지 말고 “<b>예, 믿습니다.</b>”라고 답해야 합니다. 그런데 왜 그럴까요? 바로 하느님은 사랑이시기 때문입니다.
+어제 제가 담당하는 Bonstetten 성당의 복사들과 함께 <a href="https://www.einsiedelei.ch/">Verenaschlucht</a>라는 곳으로 성지순례를 갔습니다. 점심을 먹으려고 작은 마을 식당에 들어갔는데 아이들과 동양인 신부가 우르르 들어오니, 한낮부터 맥주를 마시고 있던 세 어르신이 주목하시더군요. 그런데 저희는 보란듯이 함께 십자성호를 긋고 점심식사 기도를 했습니다. 하느님을 믿는다고 고백한 겁니다. 신앙을 감추는 이에게 천국은 없습니다. 망설이지 말고 “<strong>예, 믿습니다.</strong>”라고 답해야 합니다. 그런데 왜 그럴까요? 바로 하느님은 사랑이시기 때문입니다.
 
-아내가 남편에게 묻습니다. “나 사랑해?” 이 때 남편이 머뭇거리거나 부연설명을 한다면 재앙이 시작됩니다. 사랑은 부연설명을 필요로 하지 않습니다. 망설이지 말고 “물론이지. 온 마음으로 사랑해!”라고 답해야 합니다. <b>하느님은 사랑 자체</b>이십니다. 그래서 머뭇거림과 부연설명을 원하시지도, 또 용서하지 않으십니다. 아멘.
+아내가 남편에게 묻습니다. “나 사랑해?” 이 때 남편이 머뭇거리거나 부연설명을 한다면 재앙이 시작됩니다. 사랑은 부연설명을 필요로 하지 않습니다. 망설이지 말고 “물론이지. 온 마음으로 사랑해!”라고 답해야 합니다. <strong>하느님은 사랑 자체</strong>이십니다. 그래서 머뭇거림과 부연설명을 원하시지도, 또 용서하지 않으십니다. 아멘.
