--- a/_posts/2023/2023-06-25-homily.md
+++ b/_posts/2023/2023-06-25-homily.md
@@ -22,3 +22,7 @@ gospel_link: Mt/10
 어제 제가 담당하는 Bonstetten 성당의 복사들과 함께 <a href="https://www.einsiedelei.ch/">Verenaschlucht</a>라는 곳으로 성지순례를 갔습니다. 점심을 먹으려고 작은 마을 식당에 들어갔는데 아이들과 동양인 신부가 우르르 들어오니, 한낮부터 맥주를 마시고 있던 세 어르신이 주목하시더군요. 그런데 저희는 보란듯이 함께 십자성호를 긋고 점심식사 기도를 했습니다. 하느님을 믿는다고 고백한 겁니다. 신앙을 감추는 이에게 천국은 없습니다. 망설이지 말고 “<u>예, 믿습니다.</u>”라고 답해야 합니다. 그런데 왜 그럴까요? 바로 하느님은 사랑이시기 때문입니다.
 
 아내가 남편에게 묻습니다. “나 사랑해?” 이 때 남편이 머뭇거리거나 부연설명을 한다면 재앙이 시작됩니다. 사랑은 부연설명을 필요로 하지 않습니다. 망설이지 말고 “물론이지. 온 마음으로 사랑해!”라고 답해야 합니다. <u>하느님은 사랑 자체</u>이십니다. 그래서 머뭇거림과 부연설명을 원하시지도, 또 용서하지 않으십니다. 아멘.
+
+3분 교리 >
+
+여러분들은 사랑을 고백하고 표현하는 것을 밖에서 잘 하시나요? 우리는 미사를 통해 하느님에 대한 신앙과 사랑을 고백합니다. 하느님을 믿는다고 말할 수 있는 사회가 정상인 것입니다. 그러나 오늘날은 이러한 사랑을 고백하고 표현하는 것이 힘들어 지고 있습니다. 심지어 교회 안에서도 어려워지고 있습니다. 스위스 가톨릭 미디어가 있습니다. <a href="https://kath.ch/">kath.ch</a> 입니다. 이것은 주교님들이 재정적으로 지원하기도 하는데 여기에서 일하는 많은 사람들이 가톨릭 신자가 아니기도 하고 심지어는 교회에 반하는 생각을 갖고 있는 사람들도 많습니다. 5월은 어떤 달로 알고 계신가요? 바로 성모성월입니다. 이 성모성월에 이 미디어에서 성모님에 대해 공식적으로 모독적인 말이 난무했습니다. ‘성모님이 제왕절개 수술을 하셨다.’ 등등 말입니다. 이러한 행태를 주교님은 놔두고 계시고 답답해 하십니다. 이러한 상황에서 <a href="https://openpetition.eu/!avemaria">우리 신자들이 목소리를 내어 주교님들이 목소리를 내셔야 한다는 신앙을 고백하자는 서명</a>을 하고자 합니다. 다함께 참여하시기 바랍니다. 서명사이트: <a href="https://openpetition.eu/!avemaria">https://openpetition.eu/!avemaria</a>
