--- a/_posts/2023/2023-06-27-homily.md
+++ b/_posts/2023/2023-06-27-homily.md
@@ -4,7 +4,7 @@ title: 연중 제12주간 화요일
 layout: post 
 bonstetten: true
 first_reading: 창세기 13,2.5-18 
-first_reading_link: Gen/13
+first_reading_link: Gn/13
 gospel: 마태복음 7,6.12-14
 gospel_link: Mt/7
  
