--- a/future-dates/2023-06-30-homily.md
+++ b/future-dates/2023-06-30-homily.md
@@ -4,7 +4,7 @@ title: 연중 제12주간 금요일
 layout: post 
 bonstetten: true
 first_reading: 창세기 17,1.9-10.15-22
-first_reading_link: Gen/17
+first_reading_link: Gn/17
 gospel: 마태복음 8,1-4
 gospel_link: Mt/8
  
