--- a/_posts/2020/2020-06-28-homily.md
+++ b/_posts/2020/2020-06-28-homily.md
@@ -23,4 +23,4 @@ gospel_link: Mt/10
 
 오늘 복음에서 예수님은 '아버지나 어머니를 나보다 더 사랑하는 사람은 나에게 합당하지 않다. 아들이나 딸을 나보다 더 사랑하는 사람도 나에게 합당하지 않다'고 하십니다.
 
-우리 부모님들은 자식이 나중에 스스로 결정을 할 때 신앙의 길을 잘 갈 수 있도록 충분히 지원을 해주시고 확신을 심어주셔야 할 것입니다. 그리고 자식들이 부모님보다 하느님을 더 사랑할 수 있게 장려해주셔야 하고 섭섭하게 여기지 마시기 바랍니다. 그런 자식들은 하느님을 사랑하는 마음으로 부모를 진정으로 잘 섬기고 사랑합니다. 주님을 마음의 최고 1순위에 놓고 잘 앞으로 나가시길 바랍니다. 아멘.
+우리 부모님들은 자식이 나중에 스스로 결정을 할 때 신앙의 길을 잘 갈 수 있도록 충분히 지원을 해주시고 확신을 심어주셔야 할 것입니다. 그리고 자식들이 부모님보다 하느님을 더 사랑할 수 있게 장려해주셔야 하고 섭섭하게 여기지 마시기 바랍니다. 그런 자식들은 하느님을 사랑하는 마음으로 부모를 진정으로 잘 섬기고 사랑합니다. 주님을 마음의 최고 1순위에 놓고 잘 앞으로 나아가시길 바랍니다. 아멘.
