--- a/_posts/2023/2023-06-27-homily.md
+++ b/_posts/2023/2023-06-27-homily.md
@@ -14,7 +14,7 @@ gospel_link: Mt/7
 
 그러면 우리는 지금 어느 길로 가고 있나요? 우리는 오늘날 지금 어느 길로 가고 있나요? 넓은 문으로 가고 있나요, 좁은 문으로 가고 있나요? 우리는 어느 길로 가고 있나요?
 
-예수님께서 말씀하십니다, 제발 좁은 문으로 들어가라고, 그리고 그 문을 통과할 수 있는 사람은 소수라고요. [Gerecht werden?] 이것은 저의 주장이 아니라 예수님 말씀입니다.
+예수님께서 말씀하십니다, 제발 좁은 문으로 들어가라고, 그리고 그 문을 통과할 수 있는 사람은 소수라고요. 이것은 저의 주장이 아니라 예수님 말씀입니다.
 
 제가 어떤 성인의 위인전을 읽었습니다. 성인께서 어느 날 꿈을 꾸셨는데 전세계에서 3천명이 죽는 것을 보았습니다. 그리고 그 중에 오직 2명만이 곧바로 천국으로 갔습니다. 그리고 다른 두명은 연옥으로 갔습니다. 나머지 사람들은 모두 지옥으로 갔습니다. 성인께서는 많이 놀랐습니다. 좁은 문은 정말 좁습니다. 저의 사목구역 Bonstetten Stallikon Wettswil에 4천명 정도가 살고 있습니다. 그 중에서 20명 정도가 오늘 미사에 참석했습니다. 3천명 중에 4명, 4천명 중에 20명, 비율이 비슷한 것 같습니다. 문은 좁고, 많은 사람들이 멸망의 길을 가고 있습니다. 
 
