--- a/_posts/2023/2023-06-30-homily.md
+++ b/_posts/2023/2023-06-30-homily.md
@@ -28,5 +28,6 @@ gospel_link: Mt/8
 
 6월달에는 많은 사제들이 서품을 받습니다. 그들이 예수님께 항상 충실하도록 그들을 위해 기도합시다.
 
+<hr>
 
-프랑스 노동사제: http://www.catholicnews.co.kr/news/articleView.html?idxno=16399
+<a href="http://www.catholicnews.co.kr/news/articleView.html?idxno=16399">프랑스 노동사제 관련 기사 </a> 
